knob turning behavior

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
 <div id="dialer"></div> <!-- change left position (min: 62px max: 940px) to make it slide -->  
 <div id="shine"></div>
-<div id="tuning">
+<div id="tuning" data-value=6>
 	<div class="viewport">
 		<ul class="overview"></ul>
 	</div>
@@ -37,7 +37,6 @@
 	<div class="overlay"></div>
 	<!--<div class="thumb"></div>-->
 </div> <!-- change transform: rotate() to make it turn -->  
-<div id="volume"></div> <!-- change transform: rotate() to make it turn -->  
-
+<div id="volume" data-value=65></div> <!-- change transform: rotate() to make it turn -->  
 </body>
 </html>
