--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,6 @@
 		<script type="text/javascript" src="js/jquery.rotate.js"></script>  
 		<script type="text/javascript" src="js/jquery.jplayer.js"></script>
 		<script type="text/javascript" src="js/open-web-radio.js"></script>
-		
 	</head>
 <body>
 <div id="jquery_jplayer_1" class="jp-jplayer"></div>
@@ -38,5 +37,12 @@
 	<!--<div class="thumb"></div>-->
 </div> <!-- change transform: rotate() to make it turn -->  
 <div id="volume" data-value=65></div> <!-- change transform: rotate() to make it turn -->  
+
+<div class="song" >
+  <span id="cc_stream_info_song">Loading...</span>
+</div>
+
+		<script type="text/javascript" src="js/streaminfo_mtr.js"></script>
+    <script type="text/javascript" src="http://magictransistor.serverhostingcenter.com/js.php/alltransistor_2/streaminfo/rnd0"></script>
 </body>
 </html>
