static between stations

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,13 @@
   <span id="cc_stream_info_song">Loading...</span>
 </div>
 
-		<script type="text/javascript" src="js/streaminfo_mtr.js"></script>
-    <script type="text/javascript" src="http://magictransistor.serverhostingcenter.com/js.php/alltransistor_2/streaminfo/rnd0"></script>
+  <audio id="static_0" src="sounds/static_0.wav" type="audio/wav" preload="auto"></audio>
+  <audio id="static_1" src="sounds/static_1.wav" type="audio/wav" preload="auto"></audio>
+  <audio id="static_2" src="sounds/static_2.wav" type="audio/wav" preload="auto"></audio>
+  <audio id="static_3" src="sounds/static_3.wav" type="audio/wav" preload="auto"></audio>
+  <audio id="static_4" src="sounds/static_4.wav" type="audio/wav" preload="auto"></audio>
+  <audio id="static_5" src="sounds/static_5.wav" type="audio/wav" preload="auto"></audio>
+  <script type="text/javascript" src="js/streaminfo_mtr.js"></script>
+  <script type="text/javascript" src="http://magictransistor.serverhostingcenter.com/js.php/alltransistor_2/streaminfo/rnd0"></script>
 </body>
 </html>
