--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 		<meta name="robots" content="all" />  
 		<link type="text/css" rel="stylesheet" href="css/radio.css" />
 		<script type="text/javascript" src="js/jquery-1.4.4.js"></script>
+		<script type="text/javascript" src="js/underscore.js"></script>
 		<script type="text/javascript" src="js/jquery.grab.js"></script>
 		<script type="text/javascript" src="js/jquery.rotate.js"></script>  
 		<script type="text/javascript" src="js/jquery.jplayer.js"></script>
