missing data becomes dashes. volume click

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,8 @@
   <div class="artist"></div>
   <div class="label">Album</div>
   <div class="album"></div>
+  <div class="label">Year</div>
+  <div class="year"></div>
 </div>
 <script type="text/javascript" src="js/open-web-radio.js"></script>
 <audio id="static_0" src="sounds/static_0.wav" type="audio/wav" preload="auto"></audio>
