--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!--   
-		 https://github.com/maboa/open-web-radio
-		
-		 Dual licensed under the MIT and GPL licenses.
-		 - http://www.opensource.org/licenses/mit-license.php
-		 - http://www.gnu.org/copyleft/gpl.html
-	    -->
-		<meta charset="utf-8" />    
-		<meta name="viewport" content="width=1024" />
-	    <title>Magic Transistor Radio</title>
-	    <meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<meta name="robots" content="all" />  
-		<link type="text/css" rel="stylesheet" href="css/radio.css" />
-		<script type="text/javascript" src="js/jquery-1.4.4.js"></script>
-		<script type="text/javascript" src="js/underscore.js"></script>
-		<script type="text/javascript" src="js/jquery.grab.js"></script>
-		<script type="text/javascript" src="js/jquery.rotate.js"></script>  
-		<script type="text/javascript" src="js/jquery.jplayer.js"></script>
+  <head>
+    <!--   
+     https://github.com/maboa/open-web-radio
+    
+     Dual licensed under the MIT and GPL licenses.
+     - http://www.opensource.org/licenses/mit-license.php
+     - http://www.gnu.org/copyleft/gpl.html
+      -->
+    <meta charset="utf-8" />    
+    <meta name="viewport" content="width=1024" />
+      <title>Magic Transistor Radio</title>
+      <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <meta name="robots" content="all" />  
+    <link type="text/css" rel="stylesheet" href="css/radio.css" />
+    <script type="text/javascript" src="js/jquery-1.4.4.js"></script>
+    <script type="text/javascript" src="js/underscore.js"></script>
+    <script type="text/javascript" src="js/jquery.grab.js"></script>
+    <script type="text/javascript" src="js/jquery.rotate.js"></script>  
+    <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="js/jquery.jplayer.js"></script>
     <script src="http://confit.aws.af.cm/socket.io/socket.io.js"></script>
-	</head>
+  </head>
 <body>
 <div id="jquery_jplayer_1" class="jp-jplayer"></div>
 
@@ -30,12 +31,12 @@
 <div id="dialer"></div> <!-- change left position (min: 62px max: 940px) to make it slide -->  
 <div id="shine"></div>
 <div id="tuning" data-value=6>
-	<div class="viewport">
-		<ul class="overview"></ul>
-	</div>
-	<div class="dot"></div>
-	<div class="overlay"></div>
-	<!--<div class="thumb"></div>-->
+  <div class="viewport">
+    <ul class="overview"></ul>
+  </div>
+  <div class="dot"></div>
+  <div class="overlay"></div>
+  <!--<div class="thumb"></div>-->
 </div> <!-- change transform: rotate() to make it turn -->  
 <div id="volume" data-value=65></div> <!-- change transform: rotate() to make it turn -->  
 <div id="song_metadata" >
